--- a/src/component/Book/Book.css
+++ b/src/component/Book/Book.css
@@ -6,8 +6,10 @@
 }
 .book{
     background: lightgray;
-    padding: 10px;
+    padding: 20px;
     border-radius: 15px;
+    height: 500px;
+    margin-bottom: 20px;
 }
 .btn{
     width: 100%;
@@ -17,6 +19,7 @@
     background: lightsalmon;
     border-radius: 15px;
     border: 0;
+    padding: 15px 20 ;
 }
 .btn:hover{
     background: tomato;
