--- a/src/component/shop/Shop.css
+++ b/src/component/shop/Shop.css
@@ -4,9 +4,9 @@
     position: relative;
 }
 .product-container{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 15px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 .cart-container{
     background: lightsalmon;
